[gd_scene load_steps=4 format=2]

[ext_resource path="res://FormigaNode2D.gd" type="Script" id=1]
[ext_resource path="res://ant-man-png-27430.png" type="Texture" id=2]
[ext_resource path="res://Cerebro.jpg" type="Texture" id=3]

[node name="FormigaNode2D" type="Node2D"]
script = ExtResource( 1 )

[node name="CerebroSprite" type="Sprite" parent="."]
position = Vector2( 792, 207 )
scale = Vector2( 1.22889, 1.28667 )
texture = ExtResource( 3 )

[node name="AntManSprite" type="Sprite" parent="."]
position = Vector2( 216, 208 )
scale = Vector2( 0.208008, 0.205055 )
texture = ExtResource( 2 )

[node name="ButtonMove" type="Button" parent="."]
margin_left = 107.0
margin_top = 451.0
margin_right = 159.0
margin_bottom = 471.0
rect_scale = Vector2( 4, 4 )
text = "Mover"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSrink" type="Button" parent="."]
margin_left = 635.0
margin_top = 451.0
margin_right = 678.0
margin_bottom = 471.0
rect_scale = Vector2( 4, 4 )
text = "Srink"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonMove" to="." method="_on_ButtonMove_pressed"]
[connection signal="pressed" from="ButtonSrink" to="." method="_on_ButtonSrink_pressed"]
